--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
