--- a/package.json
+++ b/package.json
@@ -20,17 +20,8 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "assert": "^1.4.1",
     "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.0",
-    "morgan": "^1.9.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.4.0",
-    "session-file-store": "^1.1.2"
+    "mongoose": "^4.10.8"
   }
 }
