--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.10.8"
+    "mongoose": "^4.10.8",
+    "nodemon": "^1.12.1"
   }
 }
