--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "hobby-hood",
+  "name": "hobbyhood",
   "version": "1.0.0",
-  "private": true,
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
+  "keywords": [],
+  "author": "Obay Daba",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.0",
-    "connect-mongo": "^2.0.1",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "express-session": "^1.15.6",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "mongoose": "^5.2.15",
-    "morgan": "~1.9.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "express-promise-router": "^3.0.3",
+    "joi": "^13.7.0",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.0",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
+    "passport-facebook-token": "^3.3.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
